--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Export data to many file formats",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsc",
@@ -12,7 +13,13 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "docs": "typedoc",
     "release": "semantic-release",
-    "release-it": "release-it"
+    "release-it": "release-it",
+    "prepublishOnly": "npm run build",
+    "publish": "npm publish"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
