--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "NodeNext",
     "rootDir": ".",
     "outDir": "./dist",
+    "sourceRoot": "./src",
     "declaration": true,
     "sourceMap": true,
     "moduleResolution": "NodeNext",
